--- a/index.html
+++ b/index.html
@@ -1,298 +1,168 @@
 <!doctype html>
 <html lang="uk">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-<title>розклад</title>
-
-<!-- --- GOOGLE FONTS --- -->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <title>Сайт 10Л класу</title>
 <style>
-/* --- БАЗА --- */
-body {
-  margin: 0;
-  font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, Arial, sans-serif;
-  font-weight: 500; /* жирнее основной текст */
-  background: #2e2d2d;
-  color: #e6e6e6;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  overflow-x: hidden;
-}
-
-p, td, th, .btn {
-  font-weight: 600; /* чуть жирнее для текста и кнопок */
-}
-
-/* --- LOADER --- */
-#loader {
-  position: fixed;
-  inset: 0;
-  background: #2e2d2d;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 99999;
-  transition: opacity 0.25s ease, visibility 0.25s ease;
-}
-
-#loader img {
-  width: 96px;
-  height: 96px;
-  opacity: 0.85;
-  animation: spin 1.2s linear infinite;
-}
-
-#loader.hide {
-  opacity: 0;
-  visibility: hidden;
-}
-
-@keyframes spin {
-  from { transform: rotate(0deg); }
-  to   { transform: rotate(360deg); }
-}
-
-/* --- ШАПКА --- */
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 16px;
-  background: #4a4848;
-  border-radius: 0 0 16px 16px;
-  margin-bottom: 20px;
-}
-.logo {
-  width: 56px;
-  height: 56px;
-  background: #9e9e9e;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: bold;
-  color: #222;
-  border-radius: 12px;
-}
-h1 { 
-  margin: 0; 
-  font-size: 24px; 
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700; /* жирный заголовок */
-}
-h2, h3 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700; /* жирные заголовки */
-}
-
-/* --- КАРТКИ --- */
-.card {
-  background: #4a4848;
-  padding: 20px;
-  border-radius: 14px;
-  margin-bottom: 20px;
-}
-
-/* --- ТАБЛИЦІ --- */
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 12px;
-  background: #4a4848;
-  border-radius: 10px;
-  overflow: hidden;
-  table-layout: auto;
-}
-th, td { padding: 10px; }
-td { border-bottom: 1px solid rgba(255,255,255,.05); }
-
-tr.active-row td {
-  background: rgba(255,255,255,.12);
-}
-
-/* --- КНОПКИ --- */
-td .btn {
-  display: inline-block;    /* чтобы кнопки могли переноситься */
-  margin: 4px 4px 4px 0;    /* небольшой отступ между кнопками */
-  word-break: break-word;   /* перенос длинных ссылок */
-}
-
-.btn {
-  padding: 6px 10px;
-  border-radius: 8px;
-  background: #9e9e9e;
-  color: #333;
-  text-decoration: none;
-  font-weight: 600; /* жирнее кнопки */
-}
-.btn.disabled {
-  background: #333;
-  color: #9e9e9e;
-}
-
-/* --- Адаптивность для мобильных --- */
-@media (max-width: 600px) {
-  td {
-    display: block;         /* каждая ячейка на новой строке */
+  :root{
+    --bg:#1e1e1e;
+    --card:#2a2a2a;
+    --accent:#c0c0c0;
+    --muted:#a0a0a0;
+    --text:#ffffff;
+    --header:#252525;
   }
-  td .btn {
-    width: 100%;            /* кнопки растягиваются на ширину */
-    text-align: center;     /* центрируем текст */
+
+  *{box-sizing:border-box}
+  body{
+    margin:0;
+    font-family:system-ui,-apple-system,'Segoe UI',Roboto,Arial,sans-serif;
+    background:var(--bg);
+    color:var(--text);
+    min-height:100vh;
+    display:flex;
+    flex-direction:column;
+    position:relative;
+    overflow-x:hidden;
   }
-}
 
-/* --- СЕКЦІЇ --- */
-.section {
-  background: #4a4848;
-  padding: 20px;
-  border-radius: 14px;
-  margin-bottom: 20px;
-}
+  body::before{
+    content:"";
+    position:fixed;
+    top:0;left:0;width:100%;height:100%;
+    background:radial-gradient(ellipse at top,#294a6d 0%,#1e1e1e 70%);
+    z-index:-3;
+  }
 
-footer {
-  margin-top: auto;
-  padding: 18px;
-  color: #666;
-  text-align: center;
-}
-.nav-buttons {
-  display: flex;
-  flex-wrap: wrap;          /* кнопки переносятся на новую строку */
-  justify-content: center;
-  gap: 10px;                /* расстояние между кнопками */
-  margin-top: 20px;
-}
+  .container{width:94%;max-width:1100px;margin:0 auto;padding:20px 0;position:relative;z-index:2;}
 
-.nav-buttons .btn {
-  flex: 1 1 auto;           /* кнопки растягиваются при необходимости */
-  min-width: 140px;         /* минимальная ширина для красоты */
-  text-align: center;
-}
+  header{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding:16px;
+    background:linear-gradient(135deg,#2e3b4e,var(--header));
+    border-radius:12px;
+    margin-bottom:20px;
+    box-shadow:0 0 20px rgba(0,200,255,0.2);
+  }
+
+  .brand{display:flex;align-items:center;gap:14px}
+  .logo{
+    width:50px;
+    height:50px;
+    border-radius:10px;
+    background:linear-gradient(135deg,#b0e6ff,#ffffff);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-weight:700;
+    color:#00334d;
+    box-shadow:0 4px 12px rgba(0,200,255,0.5);
+  }
+
+  h1{font-size:24px;margin:0;text-shadow:0 0 8px rgba(255,255,255,0.3);}
+  p.lead{margin:4px 0 0;color:var(--muted);font-size:14px}
+
+  .hero{padding:20px;background:var(--card);border-radius:12px;box-shadow:0 8px 20px rgba(0,0,0,0.5);}
+  h1,h1{margin-top:0;color:#b0e6ff;text-shadow:0 0 10px rgba(176,230,255,0.4);}
+  table{width:100%;border-collapse:collapse;margin-top:10px}
+  th,td{border:1px solid #444; padding:6px;text-align:left;font-size:14px;vertical-align:middle;}
+  th{background:#333}
+
+  .card{
+    background:rgba(42,42,42,0.9);
+    padding:16px;
+    border-radius:12px;
+    margin-bottom:20px;
+    box-shadow:0 6px 18px rgba(0,0,0,0.4),0 0 10px rgba(176,230,255,0.1);
+  }
+
+  footer{
+    margin-top:auto;
+    padding:16px 0;
+    color:var(--muted);
+    text-align:center;
+    font-size:13px;
+    position:relative;
+    z-index:2;
+  }
+
+  .table-wrapper{overflow-x:auto}
 </style>
 </head>
-
-
 <body>
+    </header>
 
-<!-- LOADER -->
-<div id="loader">
-<a href="https://imgbb.com/"><img src="https://i.ibb.co/3mYTSs9t/pngwing-com.png" alt="pngwing com" border="0"></a>
-</div>
+    <section class="hero">
+      <div class="card">
+        <h2> Розклад </h2>
 
-<header>
-  <h1>Розклад для артема (с пісюнами)</h1>
-</header>
+        <table>
+          <tr><td>1 урок</td><td>08:00 – 08:45</td></tr>
+          <tr><td>2 урок</td><td>08:50 – 09:35</td></tr>
+          <tr><td>3 урок</td><td>09:45 – 10:30</td></tr>
+          <tr><td>4 урок</td><td>10:40 – 11:25</td></tr>
+          <tr><td>5 урок</td><td>11:35 – 12:20</td></tr>
+          <tr><td>6 урок</td><td>12:25 – 13:10</td></tr>
+          <tr><td>7 урок</td><td>13:15 – 14:00</td></tr>
+          <tr><td>8 урок</td><td>14:10 – 14:55</td></tr>
+        </table>
 
-<div class="nav-buttons">
-  <a class="btn" href="https://hed3d.github.io/class/">повний розклад</a>
-  <a class="btn" href="https://sites.google.com/view/distnavchlizey22/%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BD%D0%B0-%D1%81%D1%82%D0%BE%D1%80%D1%96%D0%BD%D0%BA%D0%B0/%D1%81%D1%82%D0%B0%D1%80%D1%88%D0%B0-%D1%88%D0%BA%D0%BE%D0%BB%D0%B0/10-%D0%BA%D0%BB%D0%B0%D1%81">сайт ліцею</a>
-</div>
+        <h3>Понеділок</h3>
+        <table>
+          <tr><td>Українська література 101 </td><td></td></tr>
+          <tr><td>Історія України 103 </td><td></td></tr>
+          <tr><td>Інформатика 207/205 </td><td></td></tr>
+          <tr><td>Англійська мова 104/303</td><td></td></tr>
+          <tr><td>Математика 104 </td><td></td></tr>
+          <tr><td>Математика 104 </td><td></td></tr>
+        </table>
 
-<p></p>
+        <h3>Вівторок</h3>
+        <table>
+          <tr><td>Захист України 309/104 </td><td></td></tr>
+          <tr><td>Громадянська освіта 103 </td><td></td></tr>
+          <tr><td>Біологія 103 </td><td></td></tr>
+          <tr><td>Українська мова 101/104 </td><td></td></tr>
+          <tr><td>Українська мова 101/104 </td><td></td></tr>
+          <tr><td>Година спілкування 104 </td><td></td></tr>
+        </table>
 
-<div class="container">
-  <div class="card">
-    <div id="banner"></div>
+        <h3>Середа</h3>
+        <table>
+          <tr><td>Історія України 103 </td><td></td></tr>
+          <tr><td>Англійська мова 207/303 </td><td></td></tr>
+          <tr><td>Фізична культура спр </td><td></td></tr>
+          <tr><td>Мистецтво / Всесвітня історія 103 </td><td></td></tr>
+          <tr><td>Географія 305 </td><td></td></tr>
+          <tr><td>Хімія 308 </td><td></td></tr>
+        </table>
 
-    <!-- Понеділок -->
-    <h3 data-day="monday">Понеділок</h3>
-    <table data-day="monday">
-      <tr><td>Українська література 08:00 – 08:45 </td><td><a class="btn" href="https://meet.google.com/ked-wbuz-bkz">Онлайн урок</a></td></tr>
-      <tr><td>Історія України 08:50 – 09:35 </td><td><a class="btn" href="https://meet.google.com/ewk-rjdu-rxq">Онлайн урок</a></td></tr>
-      <tr><td>Інформатика 09:45 – 10:30 </td><td><a class="btn" href="https://meet.google.com/xha-ymjx-sga">група 1</a> <a class="btn" href="https://meet.google.com/aya-qogn-ytw">група 2</a></td></tr>
-      <tr><td>Англійська мова 10:40 – 11:25 </td><td><a class="btn" href=https://meet.google.com/ekh-jxsg-kwa">група 1</a> <a class="btn" href="https://meet.google.com/euj-tcid-vuk">група 2</a></td></tr>
-      <tr><td>Математика 11:35 – 12:20 </td><td><a class="btn" href="https://meet.google.com/pbv-todf-wmq">Онлайн урок</a></td></tr>
-      <tr><td>Математика 12:25 – 13:10 </td><td><a class="btn" href="https://meet.google.com/pbv-todf-wmq">Онлайн урок</a></td></tr>
-    </table>
+        <h3>Четвер</h3>
+        <table>
+          <tr><td>Зарубіжна література 106 </td><td></td></tr>
+          <tr><td>Біологія 101 </td><td></td></tr>
+          <tr><td>Математика 104 </td><td></td></tr>
+          <tr><td>Математика 104 </td><td></td></tr>
+          <tr><td>Українська мова 103/104 </td><td></td></tr>
+          <tr><td>Українська мова 103/104 </td><td></td></tr>
+        </table>
 
-    <!-- Вівторок -->
-    <h3 data-day="tuesday">Вівторок</h3>
-    <table data-day="tuesday">
-      <tr><td>Захист України 08:00 – 08:45 </td><td><a class="btn" href="https://meet.google.com/pct-iynx-qtr">група 1</a> <a class="btn" href="https://meet.google.com/crv-uwvg-vkk">група 2</a></td></tr>
-      <tr><td>Громадянська освіта 08:50 – 09:35 </td><td><a class="btn" href="https://meet.google.com/ugr-bxbm-ywi">Онлайн урок</a></td></tr>
-      <tr><td>Біологія 09:45 – 10:30 </td><td><a class="btn" href="https://meet.google.com/bkb-xhph-vfx">Онлайн урок</a></td></tr>
-      <tr><td>Українська мова 10:40 – 11:25 </td><td><a class="btn" href="https://meet.google.com/syg-wkdi-bpz">група 1</a> <a class="btn" href="https://meet.google.com/hpz-yadh-itq">група 2</a></td></tr>
-      <tr><td>Українська мова 11:35 – 12:20 </td><td><a class="btn" href="https://meet.google.com/syg-wkdi-bpz">група 1</a> <a class="btn" href="https://meet.google.com/hpz-yadh-itq">група 2</a></td></tr>
-      <tr><td>Година спілкування 12:25 – 13:10 </td><td><a class="btn" href="https://meet.google.com/syg-wkdi-bpz">Онлайн урок</a></td></tr>
-    </table>
+        <h3>П’ятниця</h3>
+        <table>
+          <tr><td>Англійська мова 301 </td><td></td></tr>
+          <tr><td>Фізична культура спр </td><td></td></tr>
+          <tr><td>Захист України 309/110 </td><td></td></tr>
+          <tr><td>Фізика 104 </td><td></td></tr>
+          <tr><td>Фізика 104 </td><td></td></tr>
+        </table>
 
-    <!-- Середа -->
-    <h3 data-day="wednesday">Середа</h3>
-    <table data-day="wednesday">
-      <tr><td>Історія України 08:00 – 08:45 </td><td><a class="btn" href="https://meet.google.com/ewk-rjdu-rxq">Онлайн урок</a></td></tr>
-      <tr><td>Англійська мова 08:50 – 09:35 </td><td><a class="btn" href=https://meet.google.com/ekh-jxsg-kwa">група 1</a> <a class="btn" href="https://meet.google.com/euj-tcid-vuk">група 2</a></td></tr>
-      <tr><td>Фізична культура 09:45 – 10:30 </td><td><a class="btn" href="https://meet.google.com/qdn-noim-xrw">Онлайн урок</a></td></tr>
-      <tr><td>Мистецтво / Всесвітня історія 10:40 – 11:25 </td><td><a class="btn" href="https://meet.google.com/ewk-rjdu-rxq">Онлайн урок</a></td></tr>
-      <tr><td>Географія 11:35 – 12:20 </td><td><a class="btn" href="https://meet.google.com/pqf-rtni-ymy">Онлайн урок</a></td></tr>
-      <tr><td>Хімія 12:25 – 13:10 </td><td><a class="btn" href="https://meet.google.com/bkb-xhph-vfx">Онлайн урок</a></td></tr>
-    </table>
-
-    <!-- Четвер -->
-    <h3 data-day="thursday">Четвер</h3>
-    <table data-day="thursday">
-      <tr><td>Зарубіжна література 08:00 – 08:45 </td><td><a class="btn" href="https://meet.google.com/ecg-cxwe-oud">Онлайн урок</a></td></tr>
-      <tr><td>Біологія 08:50 – 09:35 </td><td><a class="btn" href="https://meet.google.com/bkb-xhph-vfx">Онлайн урок</a></td></tr>
-      <tr><td>Математика 09:45 – 10:30 </td><td><a class="btn" href="https://meet.google.com/pbv-todf-wmq">Онлайн урок</a></td></tr>
-      <tr><td>Математика 10:40 – 11:25 </td><td><a class="btn" href="https://meet.google.com/pbv-todf-wmq">Онлайн урок</a></td></tr>
-      <tr><td>Українська мова 11:35 – 12:20 </td><td><a class="btn" href="https://meet.google.com/syg-wkdi-bpz">група 1</a> <a class="btn" href="https://meet.google.com/hpz-yadh-itq">група 2</a></td></tr>
-      <tr><td>Українська мова 12:25 – 13:10 </td><td><a class="btn" href="https://meet.google.com/syg-wkdi-bpz">група 1</a> <a class="btn" href="https://meet.google.com/hpz-yadh-itq">група 2</a></td></tr>
-    </table>
-
-    <!-- П’ятниця -->
-    <h3 data-day="friday">П’ятниця</h3>
-    <table data-day="friday">
-      <tr><td>Англійська мова 08:00 – 08:45 </td><td><a class="btn" href=https://meet.google.com/ekh-jxsg-kwa">група 1</a> <a class="btn" href="https://meet.google.com/euj-tcid-vuk">група 2</a></td></tr>
-      <tr><td>Фізична культура 08:50 – 09:35 </td><td><a class="btn" href="https://meet.google.com/qdn-noim-xrw">Онлайн урок</a></td></tr>
-      <tr><td>Захист України 09:45 – 10:30 </td><td><a class="btn" href="https://meet.google.com/pct-iynx-qtr">група 1</a> <a class="btn" href="https://meet.google.com/crv-uwvg-vkk">група 2</a></td></tr>
-      <tr><td>Фізика 10:40 – 11:25 </td><td><a class="btn" href="https://meet.google.com/bmv-psqa-sco">Онлайн урок</a></td></tr>
-      <tr><td>Фізика 11:35 – 12:20 </td><td><a class="btn" href="https://meet.google.com/bmv-psqa-sco">Онлайн урок</a></td></tr>
-    </table>
-</div>
-
-<div class="section">
-  <h2>Новини</h2>
-  <p>оновлення сторінки, тепер є бот у телеграм</p>
-</div>
-
-<footer>
-  <p>© 2025 — Автори: asorder & hed3d</p>
-  <p>При користуванні сайтом ви автоматично приймаєте 
-    <a href="https://docs.google.com/document/d/e/2PACX-1vR918ebJYoaCuY5v3Mdk3UIzZEXSRgvjz904UNofU8DJA2a4i1MaLTbYdXMvw7JadgMLmZ7ZYghHBvx/pub" target="_blank" style="color:#b0e6ff;">ліцензійну згоду</a>.
-  </p>
-</footer>
-
-<script>
-/*загрузка*/
-window.addEventListener("load", () => {
-  setTimeout(() => {
-    document.getElementById("loader").classList.add("hide");
-  }, 250);
-});
-
-/*день*/
-function showLesson(){
-  const now = new Date();
-  const day = now.getDay();
-  const days = ['sunday','monday','tuesday','wednesday','thursday','friday','saturday'];
-
-  document.querySelectorAll("table[data-day]").forEach(t=>t.style.display='none');
-  document.querySelectorAll("h3[data-day]").forEach(h=>h.style.display='none');
-
-  const key = days[day];
-  const table = document.querySelector(`table[data-day="${key}"]`);
-  const head = document.querySelector(`h3[data-day="${key}"]`);
-
-  if(table){
-    table.style.display='table';
-    head.style.display='block';
-  }
-}
-showLesson();
-</script>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 
 </body>
-</html>
-
+      </html>
 
